/**
* MIT License
*
* Copyright (c) 2025 Sonardyne International Limited
*
* Permission is hereby granted, free of charge, to any person obtaining a copy
* of this software and associated documentation files (the "Software"), to deal
* in the Software without restriction, including without limitation the rights
* to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
* copies of the Software, and to permit persons to whom the Software is
* furnished to do so, subject to the following conditions:
*
* The above copyright notice and this permission notice shall be included in all
* copies or substantial portions of the Software.
*
* THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
* IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
* FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
* AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
* LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
* OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
* SOFTWARE.
*/

syntax = "proto3";

import "google/protobuf/any.proto";
import "sonardyne/api/common/result.proto";
import "sonardyne/api/common/timestamp.proto";

package sonardyne.api.services.configuration_service;

// SetConfigurationResponse is returned in response to a SetConfigurationRequest.
message SetConfigurationResponse {
  uint32 request_uid                                  = 1;  // Allows matching with the corresponding SetConfigurationRequest.
  sonardyne.api.common.Timestamp timestamp            = 2;  // Timestamp of the response.
  google.protobuf.Any configuration                   = 3;  // New configuration (messages ending in "Configuration") if successful.
  sonardyne.api.common.Result result                  = 4;  // Success of the SetConfigurationRequest.
}
